# ops-actions

./: .commitlintrc  .commitlintrc.yml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.js  mkdocs.yml  pyproject.toml  release-please-config.json  requirements-docs.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: new-issue.md
.github/workflows/: azure-appconfig.yml  azure-container-webapp.yml  azure-function.yml  azure-key-vault-alert.yml  azure-sql-server-secret-rotation.yml  azure-sqldb-restore.yml  azure-storage-key-rotation.yml  azure-web-app-deploy.yml  azure-webapp-deploy.yml  azure-webapp.yml  azure_devops.yml  bicep-build.yml  build-and-push.yml  build-docker-acr.yml  build-dotnet.yml  build-python.yml  ci.yml  codeql.yml  commitlint.yml  create-github-issue.yml  databricks-bundle.yml  databricks-repos.yml  dependabot-pr-title-formatter.yml  deploy-artifact.yml  deploy-azure-function-container.yml  deploy-azure-function.yml  deploy-azure-webapp-container.yml  deploy-azure-webapp.yml  deploy-mkdocs-gh-pages.yml  docker-acr.yml  docker-build.yml  docker.yml  docs.yml  dotnet.yml  github-pages.yml  lint-pr.yml  lint.yml  mkdocs-gh-pages.yml  mkdocs.yml  publish-azure-sql.yml  (+25 more)
docs/: best-practices.md  changelog.md  index.md  release.md  usage-examples.md
docs/workflows/: azure-function.md  (+28 more)
scripts/: Update-SqlServerPassword.ps1  add-deploy-key.sh  add_deploy_key.sh  terraform-backend.sh  test_path_tag_names.sh
(+29 files in other folders)
